# psychstrata-dashboard

./: .gitignore  Dockerfile  README.md  api.py  app.py  auth.py  callbacks.py  components.py  compose.dev.yml  compose.yml  config.py  llm_summary.py  main.py  model.py  requirements.txt  visualization.py
.github/: dependabot.yml  workflows
.github/workflows/: backend-deploy.yaml  backend-tests.yaml  frontend-deploy.yaml  frontend-tests.yaml
assets/: tutorial-layout.css
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  data_synth.py  llm_summary.py  main.py  model.py
backend/tests/: test_main.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App-old.tsx  App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  constants.tsx  types.ts  vite-env.d.ts
frontend/src/components/: AppShell.tsx  Card.tsx  FeatureField.tsx  SimPanel.tsx  indicators.test.tsx  indicators.tsx
frontend/src/context/: PatientContext.tsx
frontend/src/domain/: patient.test.ts  patient.ts
frontend/src/hooks/: useDashboard.test.tsx  useDashboard.ts  useScenario.ts
frontend/src/lib/: auth.ts  derive.test.ts  derive.ts  format.test.ts  format.ts  markdown.tsx  survival.test.ts  survival.ts
frontend/src/test/: fixtures.ts
frontend/src/views/: ClinicianView.tsx  IntakeView.test.tsx  IntakeView.tsx  LoginView.test.tsx  LoginView.tsx  (+3 more)
legacy-dash/: data_synth.py  model.py  requirements.txt  ven_abers.py  visualization.py
(+6 files in other folders)
