[project]
name = "psychstrata-dashboard-backend"
version = "0.1.0"
description = "FastAPI backend for the PsychStrata dashboard demo."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "mapie>=0.9.2,<0.10.0",
    "numpy>=1.26.4,<3.0.0",
    "pandas>=2.2.2,<3.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "scikit-learn>=1.4.2,<1.5.0",
    "scipy>=1.12.0,<2.0.0",
    "shap>=0.43.0,<0.44.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.2.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
